--- a/Requirements.ipynb
+++ b/Requirements.ipynb
@@ -27,7 +27,7 @@
    "metadata": {},
    "source": [
     "* Install Packages using pip3 from terminal <br>\n",
-    "pip3 install package_name"
+    "`pip3 install package_name`"
    ]
   },
   {
