--- a/Perceptron_pytorch.ipynb
+++ b/Perceptron_pytorch.ipynb
@@ -6,6 +6,7 @@
       "name": "Perceptron_pytorch.ipynb",
       "version": "0.3.2",
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,6 +29,183 @@
       "cell_type": "code",
       "metadata": {
         "id": "kGepMx_0sq3b",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import torch\n",
+        "import numpy as np\n",
+        "import torch.nn as nn\n",
+        "from sklearn import datasets\n",
+        "import matplotlib.pyplot as plt"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "u8WpZ9YBv9tc",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Create dataset**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2FaDTA6OwSXf",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "n_points = 100\n",
+        "centers = [[1,1], [-0.5,0.5]]\n",
+        "X,y = datasets.make_blobs(n_samples=n_points, centers=centers, cluster_std=0.4)\n",
+        "x_data = torch.tensor(X)\n",
+        "y_data = torch.tensor(y)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-oAcWtxhb3ZY",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Model**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MI3GmXJtxFm9",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "class Model(nn.Module):\n",
+        "  def __init__(self, input_size, output_size):\n",
+        "    super().__init__()\n",
+        "    self.linear = nn.Linear(input_size, output_size)\n",
+        "  def forward(self, x):\n",
+        "    pred = torch.sigmoid(self.linear(x))"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BzS_ai2js3gx",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "torch.manual_seed(2)\n",
+        "model = Model(input_size=2, output_size=1)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cCA0wlCPtDTf",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 69
+        },
+        "outputId": "91e30de2-af5f-4c74-9831-26135fbdd541"
+      },
+      "source": [
+        "list(model.parameters())"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[Parameter containing:\n",
+              " tensor([[ 0.1622, -0.1683]], requires_grad=True), Parameter containing:\n",
+              " tensor([0.1939], requires_grad=True)]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "iN7VAC3ytFi0",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "[w, b] = model.parameters()\n",
+        "w1, w2 = w.view(2)\n",
+        "b1 = b[0]"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MDVW6TnJuJNY",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def get_params():\n",
+        "  return (w1.item(), w2.item(), b[0].item())"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "eZI9XHCYtpxo",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "266d811b-df15-4f69-83e4-2d3a0d04a9eb"
+      },
+      "source": [
+        "get_params()"
+      ],
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(0.16220331192016602, -0.1682732105255127, 0.19390898942947388)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ApX34FCVuoaT",
         "colab_type": "code",
         "colab": {}
       },
